# caos

./: README.md
caos/: .c-process-arguments.c.swp  som.txt
caos/ariphmetics/: class.c  mul.c  pol_write.c  sum.c
caos/arm/: .artem.swp  a.out  char-filter.S  eqsolution.S  expression.S  format.S  globalvars.S  main.c  memaccess.S  test.c
caos/assembler_x86/: .Sadyk2.S.swp  .something.c.swp  Sadyk2.S  a.out  array.S  artem.S  avx-Artem.S  avx-sin.S  dot-product.S  hello-avx.S  hello-x86.S  main.c  mergesort.S  s  sadyk.S  sav_something  something.c  something.s  test.c  test4.c
caos/bash/: .man_search_with_sed.swp  man_sed  matrix.csv  save_somathing  sle_gauss
caos/beginning/: a.out  c-process-arguments.c
caos/dl/: CMakeLists.txt  aaa.cpp  implementation.cpp  interfaces.h  main.cpp  simple_dlopen.c
caos/fuse/: CMakeLists.txt  a.out  mergefs  mergefs.c  simplefs  simplefs.c
caos/http/: CMakeLists.txt  a.out  a.txt  curl_client.c  get.c  post.c
caos/openssl/: a.out  decrypt.c  dgst_sha512.c  encrypted.txt
caos/pipe/: CMakeLists.txt  a.out  connect.c  lalal.c  launch.c  n_connect.c  process_gcc_output.c
caos/python/: CMakeLists.txt  a.out  adder.c  c.py  calc.c  m.py  matrix.c  p.py  pycsvcalc.c  pyprimes.c  setup.py  solution.py  som.c  som.py  som_to_save  try.c
caos/seminar/: commands.txt  sem_1.txt  sem_2.txt  sem_3.txt  sem_4.txt  sem_6.txt  sem_7.txt  sem_8.txt
caos/signals/: a.out  abc  count_sigint.c  do_actions.c  first  ping-pong.c  second  signalfd-rtsig.c  som.c
caos/sockets/: CMakeLists.txt  a.out  client  epoll.c  epoll_read_fds.c  (+8 more)
(+54 files in other folders)
